# adiantum

./: .gitignore  LICENSE  README.md  index.md
.github/workflows/: ci.yml
benchmark/: .gitignore  README.md  _clang-format  convert_testvecs.py  meson.build  meson_options.txt
benchmark/android-tools/: adb-exe-wrapper  android-aarch64.xcompile  android.xcompile  setup-build
benchmark/cross-tools/: android-aarch64.xcompile  android-arm.xcompile  qemu-aarch64.xcompile  qemu-arm.xcompile  setup-build
benchmark/src/: aes.c  aes.h  asm_common.h  chacha-mem.c  chacha.c  chacha.h  cham.c  chaskey-lts.c  cipher_benchmark_template.h  cipherbench.c  cipherbench.h  hash_benchmark_template.h  hbsh.c  insn_timing.c  lea.c  nh.c  nh.h  noekeon.c  noekeon.h  poly1305.c  poly1305.h  rc5.c  rc6.c  speck.c  testvec.h  util.h  xtea.c  xts_benchmark_template.h
benchmark/src/aarch64/: nh-neon-core.S
benchmark/src/arm/: chacha-scalar.S  cham-neon-core.S  chaskey-lts-neon-core.S  insn_timing.S  lea-neon-core.S  nh-neon-core.S  noekeon-neon-core.S  rc5-neon-core.S  rc6-neon-core.S  speck-neon-core.S  xtea-neon-core.S
benchmark/src/x86_64/: nh-avx2-asm.S  nh-avx2-x86_64.S  nh-sse2-asm.S  nh-sse2-x86_64.S
benchmark/testvectors/: adiantum_testvecs_linux.h  nh_testvecs.h  nhpoly1305_testvecs_linux.h
python/: adiantum.py  aes.py  bachata.py  cipher.py  cipherlist.py  dumphex.py  fuzz_kernel_impls.py  hbsh.py  hexjson.py  hpolyc.py  hpolynhc.py  inputgen.py  latindance.py  nh.py  nhpoly1305.py  parse_chacha_tv.py  parse_salsa20_tv.py  parsetv.py  paths.py  poly1305.py  run_tests  test_aes.py  test_chacha.py  test_chacha20rfc.py  test_poly1305.py  test_salsa20.py  test_xchacha.py  test_xsalsa20.py  tvgen.py  xconstruct.py
specification/: .gitignore  .hunspell_en_US  acks.tex  adiantum.tex  bib.bib  build  design.tex  eprint.tex  figonly.tex  finalfig.tex  github.tex  hashing.tex  hpolyc.tex  iacr.tex  introduction.tex  performance.tex  proof.tex  shared-part.tex  specification.tex  symbols.tex  tikzlibrarygroupops.code.tex
specification/performance/: output4096  output512  outputr
specification/python/: fetchhash.py  formatperf.py  formattv.py
test_vectors/other/: chacha_testvectors.txt  poly1305.json  sources  xsalsa20.txt
test_vectors/other/aes/: ECBGFSbox128.rsp  ECBGFSbox192.rsp  ECBGFSbox256.rsp  ECBKeySbox128.rsp  ECBKeySbox192.rsp  ECBKeySbox256.rsp  ECBVarKey128.rsp  ECBVarKey192.rsp  ECBVarTxt128.rsp  ECBVarTxt192.rsp
test_vectors/ours/Adiantum/: Adiantum_XChaCha12_32_AES256.json  Adiantum_XChaCha20_32_AES256.json  Adiantum_XChaCha8_32_AES256.json
test_vectors/ours/Bachata/: Bachata12_16.json  Bachata12_32.json  Bachata20_16.json  Bachata20_32.json  Bachata8_16.json  Bachata8_32.json
test_vectors/ours/ChaCha/: ChaCha12_16.json  ChaCha12_32.json  ChaCha20_16.json  ChaCha20_32.json  ChaCha8_16.json  ChaCha8_32.json  other.json
(+24 files in other folders)
